--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <a href="https://www.facebook.com/events/205532999013082" target="_blank"><img src="images/christmas-july.jpg"
-                                                                              alt="Informative flyer for Christmas in July at BB 63 Salon. Saturday, July 15th, 2023, 11am - 3pm. 3309 Winthrop Ave, Suite #67, Fort Worth, Texas 76116."
-                                                                    class="container"></a>
+                                                                              alt="Informative flyer for Christmas in July at BB 63 Salon. Saturday, July 15th, 2023, 11am - 3pm. 3309 Winthrop Ave, Suite #67, Fort Worth, Texas 76116."></a>
   </div>
 </div>
 
