--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.8/typicons.min.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 
-  <script src="js/modal.js"></script>
+  <!--<script src="js/modal.js"></script>-->
 
 
 
 </head>
 
 <body class="is-preload">
-
+<!--
 <div id="myModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
@@ -39,7 +39,7 @@
                                                                               alt="Informative flyer for Christmas in July at BB 63 Salon. Saturday, July 15th, 2023, 11am - 3pm. 3309 Winthrop Ave, Suite #67, Fort Worth, Texas 76116."></a>
   </div>
 </div>
-
+-->
   <div id="page-wrapper">   
 
     <header id="header" class="alt">
