Replaced Cozzette's booking and website links to point to Gloss Genius

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </p>
 
         <a class="button" target="_blank" href="https://www.styleseat.com/m/v/cozzettehairstylist"
-           role="button">Book Now</a> <a class="button" target="_blank" href="https://www.cozzettehairstylist.com/"
+           role="button">Book Now</a> <a class="button" target="_blank" href="https://cozzettehairstylist.glossgenius.com/booking-flow"
                                            role="button">My Website</a>
 
       </div>
