Reversed the links because I put them in the wrong place

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
           look forward to seeing you soon, and thank you so much for viewing my profile!
         </p>
 
-        <a class="button" target="_blank" href="https://cozzettehairstylist.glossgenius.com/"
-           role="button">Book Now</a> <a class="button" target="_blank" href="https://cozzettehairstylist.glossgenius.com/booking-flow"
+        <a class="button" target="_blank" href="https://cozzettehairstylist.glossgenius.com/booking-flow"
+           role="button">Book Now</a> <a class="button" target="_blank" href="https://cozzettehairstylist.glossgenius.com/"
                                            role="button">My Website</a>
 
       </div>
