Updated Salena's bio and photograph

--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
       </div>
       <div class="row">
         <div class="three columns">
-          <img class="stylist-photo" src="images/salena.png" alt="Salena working on a client" />
+          <img class="stylist-photo" src="images/salena.jpg"
+               alt="Photo of Salena holding her favorite Esthemax products" />
           <h5>
             <a href="tel:+18174559692"><span class="typcn typcn-phone icon"></span> 817-455-9692</a><br>
             <a href="https://www.facebook.com/skinbysalena" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a><a href="https://www.instagram.com/skinbysalena/" target="_blank" rel="noreferrer noopener"><span
@@ -313,16 +314,17 @@
         </div>
         <div class="nine columns">
           <p>
-            My Name is Salena Mason. I was born and raised in Fort Worth, TX. I love traveling, and anything that involves my husky and blue heeler. I’m recently engaged and just loving life.
+            Hi! I’m so glad you’re here and even happier you’re trusting me with your skin. I have been through my own battles with acne and struggled with severe cystic acne in my early 20s. I started working with an esthetician and trusted the process and got my skin completely cleared! After going through that I knew I wanted to be able to help others. I love being able to provide clients an answer to what is causing their acne instead of just selling them a product.
           </p>
           <p>
-            I’ve always imagined owning my own business and giving my guests the best services. My goal is to always provide my clients with the most innovative skincare products and treatments. I have just recently moved to BB 63 Salon, located in the same strip as the historic Ridglea Theater bldg.
+            After working at a facial spa for 2 years I decided I wanted more! So March 2021 I opened Skin By Salena. It was the best decision I ever made! Facials and skincare are my life! When I’m not in my suite you’ll find me at Target or a local Fort Worth bar sipping on an espresso martini! I’m a Fort Worth native and live in a cozy house with my husband and our 2 dogs Hazel & Elbe.
           </p>
           <p>
-            I have been working professionally as a esthetician for several years and gained a lot of experience with my diverse clientele and services I offer. My number one passion in life is skincare. I really do enjoy making my clients feel beautiful and the connections that come along with it.
+            At Skin By Salena I am all about providing you with results, education, and a game plan! I’m here to cheer you on as we work together to achieve your skincare goals.
           </p>
           <p>
-            Please feel free to schedule your appt today.
+            Voted best facial in Fort Worth and DFW in 2023!!<br />
+            Come get a facial with me where you’ll get the glowy skin, results, and a forever esty bestie!
           </p>
           <a class="button" target="_blank" href="https://skinbysalena.glossgenius.com/services"
              role="button">Book Now</a>
