Updated Cozy's bio and photo

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
     <div class="row">
       <div class="three columns">
-        <img class="stylist-photo" src="images/cozy.jpg" alt="Cozzette's Photo" />
+        <img class="stylist-photo" src="images/cozy.jpeg" alt="Cozzette's Photo" />
         <h5>
         <a href="tel:+1817-706-4925"><span class="typcn typcn-phone icon"></span> 817-706-4925</a><br>
         <a href="https://www.facebook.com/cozzettefwtxhairstylist" target="_blank"
@@ -200,18 +200,15 @@
       </div>
       <div class="nine columns">
         <p>
-          I’m Cozzette, the owner of BB 63 Salon. I have been in this industry for 16 years, and I just recently
-          opened another salon here in Funky Town. I told myself after my kids started school I would revisit owning
-          a salon again, so that’s exactly what I did. I love working with the public and being such a huge presence
-          in the service industry. I strive to use eco and animal friendly products. I do my absolute best to
-          recycle, and try to limit the amount of unnecessary waste. I am proud to offer gender-neutral pricing,
-          meaning all prices are based on the time it takes to perform a service, not gender identity. At BB 63
-          Salon, all are welcome and will always be treated equally. “Come as you are, we’ll fix you up!” I typically
-          work Tuesday through Thursday, most Sundays and every other Saturday. I offer many services including
-          perms, however, certain services may require a consultation or may need to be performed on a weekday. Due
-          to my current workload, I rarely have openings in the evenings or on weekends. If you would like an evening
-          appointment, and you don’t see an availability with me, please consider scheduling  something with Leah. I
-          look forward to seeing you soon, and thank you so much for viewing my profile!
+          I’m Cozzette, aka Cozy, the owner of BB 63 Salon. I have been a hairstylist for 17 years. I absolutely love to create new custom looks, while also considering each client’s individual lifestyle and budget. I pride myself on giving them the ability to recreate their look at home.
+        </p>
+
+        <p>
+          At BB63, we do our best to use eco and animal-friendly retail and salon products. We recycle and try to limit the amount of unnecessary waste. I am proud to offer gender-neutral pricing. All prices are based on the time it takes to perform a service, not gender identity. At BB 63 Salon, all are welcome and will always be treated equally. “Come as you are, we’ll fix you up!” is our slogan for a reason!
+        </p>
+
+        <p>
+          My services include cuts, color, texturing, styling, and perms. Thank you so much for viewing my profile and I look forward to seeing you soon!
         </p>
 
         <a class="button" target="_blank" href="https://cozzettehairstylist.glossgenius.com/booking-flow"
