Updated Tiffany's bio and photo

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </div>
       <div class="row">
         <div class="three columns">
-          <img class="stylist-photo" src="images/tiffany.png" alt="Tiffany at Work" />
+          <img class="stylist-photo" src="images/tiffany.jpeg" alt="Tiffany at Work" />
           <h5>
             <a href="tel:+18172108840"><span class="typcn typcn-phone icon"></span> 817-210-8840</a><br>
             <a href="https://www.facebook.com/fabfacesbyt" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a><a href="https://www.instagram.com/fabulousfacesbytiffany/" target="_blank" rel="noreferrer noopener"><span
@@ -281,10 +281,16 @@
         </div>
         <div class="nine columns">
           <p>
-            I am Tiffany! Ever since I received my esthetics license I haven't looked back. I Started up Fabulous Faces by Tiffany to give my guests the best cosmetic services, and experience possible. I have worked in the healthcare industry for many years prior, so it just made sense to merge to the cosmetic side.
+            Welcome to Fabulous Faces by Tiffany, where your skin's health and beauty are my top priority. I'm Tiffany, the heart and soul behind your bespoke skincare experience. With over 8 years of dedicated experience in the skincare industry, my journey is deeply rooted in a solid medical foundation, having served as a medical assistant and lab technician. This unique background has equipped me with a profound understanding of the science behind skin health, enabling me to tailor your skincare treatments to your unique needs.
           </p>
           <p>
-            I specialize in botox injections, permanent makeup, micro blading, many types of facials and fillers. If you want to keep your youthful appearance or if you are curious if any of these services are for you, please message me. I can help you look and feel your best.
+            At Fabulous Faces by Tiffany, I specialize in rejuvenating and enhancing natural beauty through a wide array of services, including Botox, fillers, hydrofacials, facials, microneedling, dermaplaning, and medical peels. Each treatment is meticulously chosen and customized to ensure the best results for your specific skin type and concerns.
+          </p>
+          <p>
+            Patient safety and privacy are the cornerstones of my practice. I believe in creating a sanctuary where you can feel comfortable and confident in the care you receive, knowing that your well-being is always safeguarded. My commitment to excellence, combined with my passion for skincare, means you're in trusted hands.
+          </p>
+          <p>
+            Let's embark on this journey together to unveil your most radiant and fabulous face. I look forward to welcoming you to Fabulous Faces by Tiffany, where beauty and science blend seamlessly to bring out the best in your skin.
           </p>
           <a class="button" target="_blank" href="https://www.fabulousfacesbyt.com/book-online-buy"
              role="button">Book Now</a>
