Removed Salena from list

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <li><a class="smoothscroll" href="#header">Home</a></li>
                 <li><a class="smoothscroll" href="#about">About</a></li>
                 <li><a class="smoothscroll" href="#hair">Hair Services</a></li>
-                <li><a class="smoothscroll" href="#estheticians">Estheticians</a></li>
+                <li><a class="smoothscroll" href="#esthetician">Estheticians</a></li>
               </ul>
             </nav>
           </div>
@@ -77,28 +77,7 @@
 
           <!--<button id="myBtn">Open Modal</button>-->
 
-          <!-- The Modal -->
-          <div id="myModal" class="modal">
 
-            <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>Some text in the Modal..</p>
-            </div>
-
-          </div>
-
-          <a class="smoothscroll" href="#about">
-          <div class="mouse">
-            <div class="wheel"></div>
-          </div>
-          </a>
-        </div>
-
-        <a class="smoothscroll" href="#about">
-        <div class="scroll-down"></div>
-        </a>
-      </div>
     </header>
 
 <!-- About Section
@@ -300,41 +279,6 @@
     </div>
     <br />
     <br />
-    <div class="container">
-      <div class="row">
-        <h2>Salena | <small>Skin by Salena</small></h2>
-        <div class="block"></div>
-      </div>
-      <div class="row">
-        <div class="three columns">
-          <img class="stylist-photo" src="images/salena.jpg"
-               alt="Photo of Salena holding her favorite Esthemax products" />
-          <h5>
-            <a href="tel:+18174559692"><span class="typcn typcn-phone icon"></span> 817-455-9692</a><br>
-            <a href="https://www.facebook.com/skinbysalena" target="_blank" rel="noreferrer noopener"><span class="typcn typcn-social-facebook-circular icon"></span></a><a href="https://www.instagram.com/skinbysalena/" target="_blank" rel="noreferrer noopener"><span
-            class="typcn typcn-social-instagram-circular icon"></span></a>
-          </h5>
-        </div>
-        <div class="nine columns">
-          <p>
-            Hi! I’m so glad you’re here and even happier you’re trusting me with your skin. I have been through my own battles with acne and struggled with severe cystic acne in my early 20s. I started working with an esthetician and trusted the process and got my skin completely cleared! After going through that I knew I wanted to be able to help others. I love being able to provide clients an answer to what is causing their acne instead of just selling them a product.
-          </p>
-          <p>
-            After working at a facial spa for 2 years I decided I wanted more! So March 2021 I opened Skin By Salena. It was the best decision I ever made! Facials and skincare are my life! When I’m not in my suite you’ll find me at Target or a local Fort Worth bar sipping on an espresso martini! I’m a Fort Worth native and live in a cozy house with my husband and our 2 dogs Hazel & Elbe.
-          </p>
-          <p>
-            At Skin By Salena I am all about providing you with results, education, and a game plan! I’m here to cheer you on as we work together to achieve your skincare goals.
-          </p>
-          <p>
-            Voted best facial in Fort Worth and DFW in 2023!!<br />
-            Come get a facial with me where you’ll get the glowy skin, results, and a forever esty bestie!
-          </p>
-          <a class="button" target="_blank" href="https://skinbysalena.glossgenius.com/services"
-             role="button">Book Now</a>
-
-        </div>
-      </div>
-    </div>
   </section>
 
   <footer>
